2007-08-13 Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution 2.11.90 release

2007-08-10  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	** Fix for bug #444882

	* configure.in: configure options beautification

2007-08-08  Srinivasa Ragavan  <sragavan@novell.com>

	* MAINTAINERS: Updated the email/user id

2007-08-04  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fix for bug #455799

	Remove all .cvsignore and update svn:ignore porperty in whole
	directories.

2007-07-31  Veerapuram Varadhan  <vvaradhan@novell.com>

	* NEWS, configure.in: Evolution 2.11.6.1 release
	
2007-07-30  Veerapuram Varadhan  <vvaradhan@novell.com>

	* NEWS, configure.in: Evolution 2.11.6 release
	
2007-07-30  Veerapuram Varadhan  <vvaradhan@novell.com>

	* configure.in: Fix build break due to tnef-attachment plugin
	check - Do not use variable in $all_plugins_experimental.
	
2007-07-30  Chenthill Palanisamy  <pchenthill@novell.com>

	* configure.in: Fixed a build break due totypo error 
	in string libexchange-storage.

2007-07-28  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* configure.in: Enable configure option for support
	exchange-operatoion.

2007-07-27  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in:
	Collect all the required package versions in one place and
	explicitly require GTK+ 2.10 or higher.  (#380354)

	* tools/Makefile.am:
	Rename GNOME_FULL_CFLAGS to GNOME_PLATFORM_CFLAGS.

2007-07-17  Sankar P  <psankar@novell.com>

	* configure.in: Included face plugin to sources.
	Helps in attaching Face header to outgoing mails.

2007-07-09  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution 2.11.5 release

2007-07-09  Srinivasa Ragavan <sragavan@novell.com>

	** Added Attachment reminder plugin from Johhny 
	** Added initial tnef attachment plugin Lakke

	* configure.in:

2007-07-03  Gilles Dartiguelongue  <gdartigu@svn.gnome.org>

	* iconv-detect.c: fix iconv-detect.c, second part of bug #444882
